# Hexi

./: CMakeLists.txt  README.md  hexi.h
.github/workflows/: cmake-multi-platform.yml
docs/examples/: buffer_types.cpp  dynamic_buffer_with_asio.cpp  endian.cpp  error_handling.cpp  find_first_of.cpp  inject_error.cpp  serialise_custom_type.cpp  (+1 more)
include/: CMakeLists.txt
include/hexi/: binary_stream.h  buffer_adaptor.h  buffer_sequence.h  concepts.h  dynamic_buffer.h  dynamic_tls_buffer.h  endian.h  exception.h  file_buffer.h  hexi.h  null_buffer.h  shared.h  static_buffer.h  stream_adaptors.h  version.h
include/hexi/allocators/: block_allocator.h  default_allocator.h  tls_block_allocator.h
include/hexi/detail/: intrusive_storage.h
include/hexi/impl/: intrusive_storage.h
include/hexi/pmc/: binary_stream.h  binary_stream_reader.h  binary_stream_writer.h  buffer.h  buffer_adaptor.h  buffer_base.h  buffer_read.h  buffer_read_adaptor.h  buffer_write.h  buffer_write_adaptor.h  null_buffer.h  stream_base.h
include/hexi/pmr/: binary_stream.h  binary_stream_reader.h  binary_stream_writer.h  buffer.h  buffer_adaptor.h  buffer_base.h  buffer_read.h  buffer_read_adaptor.h  buffer_write.h  buffer_write_adaptor.h  null_buffer.h  stream_base.h
single_include/: hexi.h
tests/: CMakeLists.txt  binary_stream.cpp  binary_stream_pmc.cpp  binary_stream_pmr.cpp  buffer_adaptor.cpp  buffer_adaptor_pmc.cpp  buffer_adaptor_pmr.cpp  buffer_utility.cpp  dynamic_buffer.cpp  file_buffer.cpp  helpers.h  intrusive_storage.cpp  null_buffer.cpp  static_buffer.cpp  tls_block_allocator.cpp
